# vBARWIS

./: .gitignore  main.py  main.spec  pyproject.toml
sensor_types/: readings.py
src/meteo_brussels/: main.py
src/meteo_brussels/api_calls/: __init__.py
src/meteo_brussels/resources/: resources.py  resources.qrc
src/meteo_brussels/sensor_types/: __init__.py  meteo_reading.py  readings.py
src/meteo_brussels/widgets/: __init__.py  big_label.py  many_wind_roses.py
src/meteo_brussels/widgets/sensor_table/: __init__.py  model.py
src/meteo_brussels/widgets/weather_data/: __init__.py
src/meteo_brussels/widgets/wind_grid/: __init__.py  wind_cell.py
src/meteo_brussels/widgets/wind_rose/: __init__.py  arc.py  popout.py  selectable.py  wind_reading.py
