[project]
name = "meteo-brussels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.4",
    "pyside6>=6.10.0",
    "python-metar>=1.4.0",
    "requests>=2.32.5",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
